<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ResetPasswordActivity"
	android:padding="24sp">

	<ImageView
		android:id="@+id/backBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="0sp"
		android:minWidth="30sp"
		android:minHeight="30sp"
		android:src="@drawable/ic_baseline_arrow_back_24"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tvHeader1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="60sp"
		android:fontFamily="@font/montserrat_semi_bold"
		android:text="@string/reset_password"
		android:textColor="@color/colorTextPrimary"
		android:textSize="36sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/backBtn" />

	<TextView
		android:id="@+id/tvSubHeader1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8sp"
		android:text="Reset code was sent to your email. Please enter the code and create new password"
		android:textColor="@color/colorTextSecondary"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvHeader1" />

	<TextView
		android:id="@+id/tvLabel1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40sp"
		android:text="@string/reset_code"
		android:textColor="@color/colorTextPrimary"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvSubHeader1" />

	<EditText
		android:id="@+id/etResetCode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_your_number"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvLabel1" />

	<TextView
		android:id="@+id/tvLabel2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15sp"
		android:text="@string/new_password"
		android:textColor="@color/colorTextPrimary"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etResetCode" />

	<EditText
		android:id="@+id/etNewPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_your_password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvLabel2" />

	<TextView
		android:id="@+id/tvLabel3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15sp"
		android:text="@string/confirm_password"
		android:textColor="@color/colorTextPrimary"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

	<EditText
		android:id="@+id/etConfirmPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_your_confirm_password"
		android:inputType="textPassword"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvLabel3" />

	<Button
		android:id="@+id/changeBtn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40sp"
		android:background="@drawable/button_red"
		android:fontFamily="@font/montserrat_semi_bold"
		android:text="@string/change_password"
		android:textAllCaps="false"
		android:textColor="#ffffff"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>