<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ForgotPasswordActivity"
	android:padding="24sp">

	<ImageView
		android:id="@+id/backBtn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="0sp"
		android:minWidth="30sp"
		android:minHeight="30sp"
		android:src="@drawable/ic_baseline_arrow_back_24"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tvHeader1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="60sp"
		android:fontFamily="@font/montserrat_semi_bold"
		android:text="@string/forgot_password"
		android:textColor="@color/colorTextPrimary"
		android:textSize="36sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/backBtn" />

	<TextView
		android:id="@+id/tvSubHeader1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8sp"
		android:text="Please enter your email below to recieve your password reset instruction"
		android:textColor="@color/colorTextSecondary"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvHeader1" />

	<TextView
		android:id="@+id/tvLabel1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40sp"
		android:text="@string/username"
		android:textColor="@color/colorTextPrimary"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvSubHeader1" />

	<EditText
		android:id="@+id/etUsername"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_your_username"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvLabel1" />

	<Button
		android:id="@+id/sendRequestBtn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="40sp"
		android:background="@drawable/button_red"
		android:fontFamily="@font/montserrat_semi_bold"
		android:text="@string/send_request"
		android:textAllCaps="false"
		android:textColor="#ffffff"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/etUsername" />

</androidx.constraintlayout.widget.ConstraintLayout>